[project]
name = "rag-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "badrmarani",email = "badr-eddine.marani@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langchain-milvus (>=0.1.10,<0.2.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
